--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ In every lifetime… I choose you. 💕
 </div>
 
 <div class="slideshow">
-<img id="slide" src="photo1.jpg">
+<img id="slide" src="photo1.jpeg">
 </div>
 
 <br>
@@ -201,7 +201,7 @@ document.getElementById("days").innerText=
 "Married for "+diff+" beautiful days 💍";
 
 /* Slideshow */
-const imgs=["photo1.jpg","photo2.jpg","photo3.jpg"];
+const imgs=["photo1.jpeg","photo2.jpeg","photo3.jpeg"];
 let i=0;
 setInterval(()=>{
 i=(i+1)%imgs.length;
